[gd_scene load_steps=4 format=3 uid="uid://gohkg4cc55pp"]

[ext_resource type="Script" path="res://scenes/field_objects/air_raid_bomb_spawner/air_raid_bomb_spawner.gd" id="1_u60b3"]
[ext_resource type="PackedScene" uid="uid://bdvqd3xumvy8j" path="res://scenes/weapons/enemy_air_raid_bomb/enemy_air_raid_bomb.tscn" id="2_u5140"]
[ext_resource type="Texture2D" uid="uid://bvtpr87gpv4y1" path="res://assets/sprites/shots/air_raid_bomb.png" id="3_fq8k2"]

[node name="AirRaidBombSpawner" type="Node2D"]
script = ExtResource("1_u60b3")
bomb_scene = ExtResource("2_u5140")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="IntervalTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="MockSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_fq8k2")
hframes = 3
frame = 2

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="IntervalTimer" to="." method="_on_interval_timer_timeout"]
